--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "@vitejs/plugin-react": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "prettier": "2.8.3",
+    "autoprefixer": "10.4.13",
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/parser": "5.48.2",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "tailwindcss": "3.2.4",
     "postcss": "8.4.21",
-    "autoprefixer": "10.4.13"
+    "prettier": "2.8.3",
+    "tailwindcss": "3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
