--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "happy-dom": "^8.2.6",
     "postcss": "8.4.21",
     "prettier": "2.8.3",
     "tailwindcss": "3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.28.4"
   }
 }
