--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest --run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "formik": "^2.2.9",
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.28.4",
     "autoprefixer": "10.4.13",
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
